[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/egg/ClickableTexture.gd" type="Script" id=1]
[ext_resource path="res://assets/objects/radio.png" type="Texture" id=2]
[ext_resource path="res://src/egg/Radio.gd" type="Script" id=3]
[ext_resource path="res://assets/objects/lamp/lamp-on-3.png" type="Texture" id=4]
[ext_resource path="res://assets/objects/lamp/lamp-off-3.png" type="Texture" id=5]

[node name="Radio" type="Node2D"]
script = ExtResource( 3 )

[node name="NextButton" type="Node2D" parent="."]
position = Vector2( 0, 4 )
script = ExtResource( 1 )
clickable_texture_path = NodePath("Sprite")

[node name="Sprite" type="Sprite" parent="NextButton"]
position = Vector2( 10, 0 )
texture = ExtResource( 4 )

[node name="PowerButton" type="Node2D" parent="."]
position = Vector2( -15, -27 )
script = ExtResource( 1 )
clickable_texture_path = NodePath("Sprite")

[node name="Sprite" type="Sprite" parent="PowerButton"]
position = Vector2( 10, 0 )
texture = ExtResource( 4 )

[node name="PreviousButton" type="Node2D" parent="."]
position = Vector2( -4, 4 )
script = ExtResource( 1 )
clickable_texture_path = NodePath("Sprite")

[node name="Sprite" type="Sprite" parent="PreviousButton"]
texture = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
